# Archivum

./: .gitignore  README.md  RUST_EXPLAINED.md  build.ps1  dev.cmd  dev.ps1  index.html  package-lock.json  package.json  vite.config.ts
sample-vault/: README.md
sample-vault/concepts/: economy.md
sample-vault/mediators/: get-player-balance.md  update-player-balance.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_commands.rs  lib.rs  main.rs  search.rs
src/components/: ContextMenu.tsx  DocEditor.tsx  DocTree.tsx  DocViewer.tsx  FullGraphView.tsx  GraphView.tsx  Settings.tsx  Sidebar.tsx
src/lib/: document.ts  frontmatter.ts  graphLayout.ts  search.ts  settings.ts  tauri.ts  vault.ts  vaultConfig.ts  wikilinks.ts
src/store/: menu.ts  nav.ts  vault.ts
